--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
       <section class="section-hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero-btn">Заказать услугу</button>
+          <button type="button" class="hero-btn" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -146,6 +148,7 @@
                 width="370"
                 height="294"
               />
+              <p class="services-item-overlay">Десктопные приложения</p>
             </li>
             <li class="services-item">
               <img
@@ -154,6 +157,7 @@
                 width="370"
                 height="294"
               />
+              <p class="services-item-overlay">Мобильные приложения</p>
             </li>
             <li class="services-item">
               <img
@@ -162,6 +166,7 @@
                 width="370"
                 height="294"
               />
+              <p class="services-item-overlay">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -474,6 +479,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="icon-close" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
