добавляет portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,120 +87,212 @@
           <h2 class="no-title visually-hidden">Проекты</h2>
           <ul class="list card-set">
             <li class="card-item">
-              <img
-                src="./images/portfolio/project1.jpeg"
-                alt="открыт сайт на мониторе ноутбука"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Технокряк</h3>
-                <p class="project-description">Веб-сайт</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project1.jpeg"
+                    alt="открыт сайт на мониторе ноутбука"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Технокряк</h3>
+                  <p class="project-description">Веб-сайт</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project2.jpeg"
-                alt="баскетболисты играют"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Постер New Orlean vs Golden Star</h3>
-                <p class="project-description">Дизайн</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project2.jpeg"
+                    alt="баскетболисты играют"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="project-description">Дизайн</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project3.jpeg"
-                alt="логотип ресторана"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Ресторан Seafood</h3>
-                <p class="project-description">Приложение</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project3.jpeg"
+                    alt="логотип ресторана"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Ресторан Seafood</h3>
+                  <p class="project-description">Приложение</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project4.jpeg"
-                alt="наушники"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Проект Prime</h3>
-                <p class="project-description">Маркетинг</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project4.jpeg"
+                    alt="наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Проект Prime</h3>
+                  <p class="project-description">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project5.jpeg"
-                alt="белый и бежевый боксы"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Проект Boxes</h3>
-                <p class="project-description">Приложение</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project5.jpeg"
+                    alt="белый и бежевый боксы"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Проект Boxes</h3>
+                  <p class="project-description">Приложение</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project6.jpeg"
-                alt="монитор компьютера"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Inspiration has no Borders</h3>
-                <p class="project-description">Веб-сайт</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project6.jpeg"
+                    alt="монитор компьютера"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Inspiration has no Borders</h3>
+                  <p class="project-description">Веб-сайт</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project7.jpeg"
-                alt="открыт журнал"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Издание Limited Edition</h3>
-                <p class="project-description">Дизайн</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project7.jpeg"
+                    alt="открыт журнал"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Издание Limited Edition</h3>
+                  <p class="project-description">Дизайн</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project8.jpeg"
-                alt="бирка"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Проект LAB</h3>
-                <p class="project-description">Маркетинг</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project8.jpeg"
+                    alt="бирка"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Проект LAB</h3>
+                  <p class="project-description">Маркетинг</p>
+                </div>
+              </a>
             </li>
 
             <li class="card-item">
-              <img
-                src="./images/portfolio/project9.jpeg"
-                alt="мужчина работает за ноутбуком"
-                width="370"
-                height="294"
-              />
-              <div class="card-item-description">
-                <h3 class="project-title">Growing Business</h3>
-                <p class="project-description">Приложение</p>
-              </div>
+              <a class="card-item-link link" href="">
+                <div class="card-item-wrapper">
+                  <img
+                    src="./images/portfolio/project9.jpeg"
+                    alt="мужчина работает за ноутбуком"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Perspiciatis, itaque amet excepturi autem iste nisi enim
+                    earum, saepe cumque corrupti incidunt? Maiores ipsam numquam
+                    rem iste ratione veritatis quis reiciendis?
+                  </p>
+                </div>
+                <div class="card-item-description">
+                  <h3 class="project-title">Growing Business</h3>
+                  <p class="project-description">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
